--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Borterion
-description: Where the Art meets Science. Giving the universe a voice. Physicist, musician, creative coder.
+#description: Where the Art meets Science. Giving the universe a voice. Physicist, musician, creative coder.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
