--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Borterion
+title: borterion
 #description: Where the Art meets Science. Giving the universe a voice. Physicist, musician, creative coder.
 show_downloads: true
 google_analytics:
