--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: ./borterion.sh
-description: Physicist, musician, creative coder
+description: Physicist | musician | creative coder
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
